--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tianyi Zhou"
   avatar           : "tianyi.png"
-  bio              : "Tianyi Zhou is a machine learning PhD student at Paul G. Allen school of Computer Science and Engineering, University of Washington, supervised by Prof. Jeff A. Bilmes and Prof. Carlos Guestrin. He published ~50 papers at NeurIPS, ICML, ICLR, AISTATS, NAACL, KDD, ICDM, IJCAI, AAAI, ISIT, Machine Learning Journal, IEEE TIP, IEEE TNNLS, IEEE TKDE, etc, with >1800 citations. He is the recipient of the Best student paper award at ICDM 2013."
+  bio              : "Ph.D. student at Paul G. Allen school of Computer Science and Engineering, University of Washington."
   location         : "Seattle, WA, USA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
