--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tianyi Zhou"
   avatar           : "tianyi.png"
-  bio              : "Ph.D. student at Paul G. Allen school of Computer Science and Engineering, University of Washington."
+  bio              : "Ph.D. student at Paul G. Allen School of Computer Science & Engineering, University of Washington."
   location         : "Seattle, WA, USA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
