--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Tianyi Zhou"
   avatar           : "Tianyi_ZHOU.jpg"
-  bio              : "Ph.D. student at Paul G. Allen School of Computer Science & Engineering, University of Washington."
-  location         : "Seattle, WA, USA"
+  bio              : "Assistant Professor of Computer Science and UMIACS, University of Maryland."
+  location         : "College Park, MD, USA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=OKvgizMAAAAJ&hl=en"
-  email            : "tianyizh@uw.edu"
+  email            : "tianyi.david.zhou@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Tianyi_Zhou2"
   uri              :
   bitbucket        :
