--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tianyi Zhou"
   avatar           : "Tianyi_ZHOU.jpg"
-  bio              : "Assistant Professor of Computer Science"
+  bio              : "Ph.D. and Assistant Professor of Computer Science"
   location         : "College Park, MD, USA"
   employer         : "UMIACS, University of Maryland"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -255,7 +255,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/New_York # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
