--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Tianyi_ZHOU.jpg"
   bio              : "Ph.D. and Assistant Professor of Computer Science"
   location         : "College Park, MD, USA"
-  employer         : "UMIACS, University of Maryland"
+  employer         : "University of Maryland"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=OKvgizMAAAAJ&hl=en"
   email            : "tianyi@umd.edu"
