--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,11 +6,11 @@ main:
   - title: "Group"
     url: /group/    
 
+  - title: "Research"
+    url: /research/
+
   - title: "Teaching"
     url: /teaching/    
-    
-  # - title: "Portfolio"
-    # url: /portfolio/
         
   # - title: "Blog Posts"
     # url: /year-archive/
