--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tianyi Zhou"
   avatar           : "Tianyi_ZHOU.jpg"
-  bio              : "Ph.D. and Assistant Professor of Computer Science"
+  bio              : "Assistant Professor of Computer Science"
   location         : "College Park, MD, USA"
   employer         : "University of Maryland"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
