--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Tianyi Zhou (周天翼)"
 title_separator          : "-"
 name                     : &name "Tianyi Zhou"
-description              : &description "Assistant Professor of Computer Science & UMIACS at University of Maryland"
+# description              : &description "Assistant Professor of Computer Science & UMIACS at University of Maryland"
 url                      : https://tianyizhou.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "tianyizhou/tianyizhou.github.io"
@@ -83,8 +83,8 @@ author:
   name             : "Tianyi Zhou"
   avatar           : "Tianyi_ZHOU.jpg"
   bio              : "Assistant Professor of Computer Science"
-  location         : "College Park, MD, USA"
-  employer         : "University of Maryland"
+  location         : ""
+  employer         : ""
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=OKvgizMAAAAJ&hl=en"
   email            : "zhou@umiacs.umd.edu"
