--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : ""
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=OKvgizMAAAAJ&hl=en"
-  email            : "zhou@umiacs.umd.edu"
+  email            : "tianyi.david.zhou@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Tianyi_Zhou2"
   uri              :
   bitbucket        :
